--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,10 +4,7 @@ on:
   push:
     branches:
       - master
-  workflow_dispatch:
-    inputs:
-      reason:
-        required: false
+  workflow_dispatch: {}
 
 permissions:
   actions: write
